@@ -1,0 +1,22 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <title>
+      Headers and Footers
+    </title>
+    <link rel="stylesheet" href="book.css" charset="ISO-8859-1" type="text/css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
+    <meta http-equiv="Content-Style-Type" content="text/css"/>
+  </head>
+  <body>
+    <h1>
+      Headers and Footers
+    </h1>
+	<p>
+    You can include a header and footer in your exported or browser-view documents by creating the files <span class="code">header.html</span>
+    and/or <span class="code">footer.html</span>. These files are html snippets that will be included in all rendered Wiki documents in the
+    folder that the header and footer files reside.
+    </p>
+  </body>
+</html>
+
