@@ -86,6 +86,7 @@ public final class WikiExporter {
 	}
 
 	private void writeFooter(PrintWriter writer) {
+		writer.println("    <p><small>Generated by <a href=\"http://eclipsewiki.sourceforge.net\">EclipseWiki</a></small></p>");
 		writer.println("  </body>");
 		writer.println(" </html>");
 	}
@@ -95,7 +96,7 @@ public final class WikiExporter {
 		writer.println("<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01//EN\" \"http://www.w3.org/TR/html4/strict.dtd\">");
 		writer.println("<html>");
 		writer.println("  <head>");
-		writer.print("    <title>Index</title>");
+		writer.println("    <title>Index</title>");
 		writer.println("  </head>");
 		writer.println("  <body>");
 	}
